--- a/ants/lib/CMakeLists.txt
+++ b/ants/lib/CMakeLists.txt
@@ -12,30 +12,33 @@ find_package(VTK)
 
 add_subdirectory(pybind11)
 
+# ------------------------------------------------------------
+# MODULES
 
-# CORE
+## CORE
 pybind11_add_module(readImage readImage.cxx)
 pybind11_add_module(antsImage antsImage.cxx)
 pybind11_add_module(readTransform readTransform.cxx)
 pybind11_add_module(antsTransform antsTransform.cxx)
 pybind11_add_module(antsImageHeaderInfo antsImageHeaderInfo.cxx)
+pybind11_add_module(antsImageToImageMetric antsImageToImageMetric.cxx)
 
-# SEGMENTATION
+## SEGMENTATION
 pybind11_add_module(Atropos Atropos.cxx)
 pybind11_add_module(KellyKapowski KellyKapowski.cxx)
 pybind11_add_module(antsJointFusion antsJointFusion.cxx)
 
-# REGISTRATION
+## REGISTRATION
 pybind11_add_module(antsRegistration antsRegistration.cxx)
 pybind11_add_module(antsImageMutualInformation antsImageMutualInformation.cxx)
 pybind11_add_module(antsApplyTransforms antsApplyTransforms.cxx)
 pybind11_add_module(CreateJacobianDeterminantImage CreateJacobianDeterminantImage.cxx)
 pybind11_add_module(ResampleImage ResampleImage.cxx)
 
-# LEARN
+## LEARN
 pybind11_add_module(sccaner sccaner.cxx)
 
-# UTILS
+## UTILS
 pybind11_add_module(N3BiasFieldCorrection N3BiasFieldCorrection.cxx)
 pybind11_add_module(N4BiasFieldCorrection N4BiasFieldCorrection.cxx)
 pybind11_add_module(ThresholdImage ThresholdImage.cxx)
@@ -50,25 +53,39 @@ pybind11_add_module(reorientImage reorientImage.cxx)
 pybind11_add_module(weingartenImageCurvature weingartenImageCurvature.cxx)
 pybind11_add_module(labelStats labelStats.cxx)
 
+# ------------------------------------------------------------
+# LINKING
+
+## CORE
 target_link_libraries(readImage PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(antsImage PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(readTransform PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(antsTransform PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(antsImageHeaderInfo PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(antsImageToImageMetric PRIVATE ${ITK_LIBRARIES})
 
+## SEGMENTATION
+target_link_libraries(Atropos PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(KellyKapowski PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(antsJointFusion PRIVATE ${ITK_LIBRARIES})
+
+## REGISTRATION
+target_link_libraries(antsRegistration PRIVATE ${ITK_LIBRARIES} ${ITKIOImageBase_LIBRARIES} ${ITKZLIB_LIBRARIES})
+target_link_libraries(antsImageMutualInformation PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(antsApplyTransforms PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(CreateJacobianDeterminantImage PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(ResampleImage PRIVATE ${ITK_LIBRARIES})
+
+## LEARN
+target_link_libraries(sccaner PRIVATE ${ITK_LIBRARIES})
+
+## UTILS
 target_link_libraries(N3BiasFieldCorrection PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(N4BiasFieldCorrection PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(ThresholdImage PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(iMath PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(LabelClustersUniquely PRIVATE ${ITK_LIBRARIES})
-target_link_libraries(Atropos PRIVATE ${ITK_LIBRARIES})
-target_link_libraries(sccaner PRIVATE ${ITK_LIBRARIES})
-target_link_libraries(ResampleImage PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(SmoothImage PRIVATE ${ITK_LIBRARIES})
-target_link_libraries(antsRegistration PRIVATE ${ITK_LIBRARIES} ${ITKIOImageBase_LIBRARIES} ${ITKZLIB_LIBRARIES})
-target_link_libraries(antsImageMutualInformation PRIVATE ${ITK_LIBRARIES})
-target_link_libraries(antsApplyTransforms PRIVATE ${ITK_LIBRARIES})
-target_link_libraries(CreateJacobianDeterminantImage PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(reflectionMatrix PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(cropImage PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(mergeChannels PRIVATE ${ITK_LIBRARIES})
@@ -76,8 +93,7 @@ target_link_libraries(DenoiseImage PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(reorientImage PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(weingartenImageCurvature PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(labelStats PRIVATE ${ITK_LIBRARIES})
-target_link_libraries(KellyKapowski PRIVATE ${ITK_LIBRARIES})
-target_link_libraries(antsJointFusion PRIVATE ${ITK_LIBRARIES})
+
 
 if(NOT VTK)
     message("VTK library not found... not building ants.Surf or ants.Vol")
