--- a/ants/lib/CMakeLists.txt
+++ b/ants/lib/CMakeLists.txt
@@ -34,6 +34,7 @@ pybind11_add_module(antsImageMutualInformation antsImageMutualInformation.cxx)
 pybind11_add_module(antsApplyTransforms antsApplyTransforms.cxx)
 pybind11_add_module(CreateJacobianDeterminantImage CreateJacobianDeterminantImage.cxx)
 pybind11_add_module(ResampleImage ResampleImage.cxx)
+pybind11_add_module(antsAffineInitializer antsAffineInitializer.cxx)
 
 ## LEARN
 pybind11_add_module(sccaner sccaner.cxx)
@@ -75,6 +76,7 @@ target_link_libraries(antsImageMutualInformation PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(antsApplyTransforms PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(CreateJacobianDeterminantImage PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(ResampleImage PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(antsAffineInitializer PRIVATE ${ITK_LIBRARIES})
 
 ## LEARN
 target_link_libraries(sccaner PRIVATE ${ITK_LIBRARIES})
