--- a/ants/lib/CMakeLists.txt
+++ b/ants/lib/CMakeLists.txt
@@ -46,6 +46,7 @@ pybind11_add_module(N3BiasFieldCorrection N3BiasFieldCorrection.cxx)
 pybind11_add_module(N4BiasFieldCorrection N4BiasFieldCorrection.cxx)
 pybind11_add_module(ThresholdImage ThresholdImage.cxx)
 pybind11_add_module(iMath iMath.cxx)
+pybind11_add_module(invariantImageSimilarity invariantImageSimilarity.cxx)
 pybind11_add_module(LabelClustersUniquely LabelClustersUniquely.cxx)
 pybind11_add_module(SmoothImage SmoothImage.cxx)
 pybind11_add_module(reflectionMatrix reflectionMatrix.cxx)
@@ -90,6 +91,7 @@ target_link_libraries(N3BiasFieldCorrection PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(N4BiasFieldCorrection PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(ThresholdImage PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(iMath PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(invariantImageSimilarity PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(LabelClustersUniquely PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(SmoothImage PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(reflectionMatrix PRIVATE ${ITK_LIBRARIES})
