--- a/ants/lib/CMakeLists.txt
+++ b/ants/lib/CMakeLists.txt
@@ -23,6 +23,7 @@ pybind11_add_module(antsTransform antsTransform.cxx)
 pybind11_add_module(antsImageHeaderInfo antsImageHeaderInfo.cxx)
 pybind11_add_module(antsImageToImageMetric antsImageToImageMetric.cxx)
 pybind11_add_module(antsImageClone antsImageClone.cxx)
+pybind11_add_module(getNeighborhoodMatrix getNeighborhoodMatrix.cxx)
 
 ## SEGMENTATION
 pybind11_add_module(Atropos Atropos.cxx)
@@ -68,6 +69,7 @@ target_link_libraries(antsTransform PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(antsImageHeaderInfo PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(antsImageToImageMetric PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(antsImageClone PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(getNeighborhoodMatrix PRIVATE ${ITK_LIBRARIES})
 
 ## SEGMENTATION
 target_link_libraries(Atropos PRIVATE ${ITK_LIBRARIES})
