--- a/ants/lib/CMakeLists.txt
+++ b/ants/lib/CMakeLists.txt
@@ -59,6 +59,9 @@ pybind11_add_module(reorientImage reorientImage.cxx)
 pybind11_add_module(weingartenImageCurvature weingartenImageCurvature.cxx)
 pybind11_add_module(labelStats labelStats.cxx)
 
+## EXPERIMENTAL
+# pybind11_add_module(destroyImage destroyImage.cxx)
+
 # ------------------------------------------------------------
 # LINKING
 
@@ -105,6 +108,9 @@ target_link_libraries(DenoiseImage PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(reorientImage PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(weingartenImageCurvature PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(labelStats PRIVATE ${ITK_LIBRARIES})
+
+## EXPERIMENTAL
+# target_link_libraries(destroyImage PRIVATE ${ITK_LIBRARIES})
 
 
 if(NOT VTK)
