--- a/ants/lib/CMakeLists.txt
+++ b/ants/lib/CMakeLists.txt
@@ -16,14 +16,15 @@ add_subdirectory(pybind11)
 # MODULES
 
 ## CORE
-pybind11_add_module(readImage readImage.cxx)
 pybind11_add_module(antsImage antsImage.cxx)
-pybind11_add_module(readTransform readTransform.cxx)
-pybind11_add_module(antsTransform antsTransform.cxx)
+pybind11_add_module(antsImageClone antsImageClone.cxx)
 pybind11_add_module(antsImageHeaderInfo antsImageHeaderInfo.cxx)
 pybind11_add_module(antsImageToImageMetric antsImageToImageMetric.cxx)
-pybind11_add_module(antsImageClone antsImageClone.cxx)
+pybind11_add_module(antsImageUtils antsImageUtils.cxx)
+pybind11_add_module(antsTransform antsTransform.cxx)
 pybind11_add_module(getNeighborhoodMatrix getNeighborhoodMatrix.cxx)
+pybind11_add_module(readImage readImage.cxx)
+pybind11_add_module(readTransform readTransform.cxx)
 
 ## SEGMENTATION
 pybind11_add_module(Atropos Atropos.cxx)
@@ -66,14 +67,15 @@ pybind11_add_module(labelStats labelStats.cxx)
 # LINKING
 
 ## CORE
-target_link_libraries(readImage PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(antsImage PRIVATE ${ITK_LIBRARIES})
-target_link_libraries(readTransform PRIVATE ${ITK_LIBRARIES})
-target_link_libraries(antsTransform PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(antsImageClone PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(antsImageHeaderInfo PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(antsImageToImageMetric PRIVATE ${ITK_LIBRARIES})
-target_link_libraries(antsImageClone PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(antsImageUtils PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(antsTransform PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(getNeighborhoodMatrix PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(readImage PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(readTransform PRIVATE ${ITK_LIBRARIES})
 
 ## SEGMENTATION
 target_link_libraries(Atropos PRIVATE ${ITK_LIBRARIES})
