separate build and wrap

--- a/ants/lib/CMakeLists.txt
+++ b/ants/lib/CMakeLists.txt
@@ -38,17 +38,32 @@ pybind11_add_module(SmoothImage LOCAL_SmoothImage.cxx)
 pybind11_add_module(weingartenImageCurvature LOCAL_weingartenImageCurvature.cxx)
 
 ## WRAP ##
-pybind11_add_module(antsAffineInitializer antscore/antsAffineInitializer.cxx WRAP_antsAffineInitializer.cxx antscore/antsUtilities.cxx antscore/ReadWriteData.cxx)
-pybind11_add_module(antsApplyTransforms antscore/antsApplyTransforms.cxx WRAP_antsApplyTransforms.cxx antscore/antsUtilities.cxx antscore/ReadWriteData.cxx antscore/antsCommandLineOption.cxx antscore/antsCommandLineParser.cxx)
+pybind11_add_module(antsAffineInitializer antscore/antsAffineInitializer.cxx WRAP_antsAffineInitializer.cxx  antscore/antsUtilities.cxx antscore/ReadWriteData.cxx antscore/antsCommandLineOption.cxx antscore/antsCommandLineParser.cxx antscore/ANTsVersion.cxx)
+pybind11_add_module(antsApplyTransforms antscore/antsApplyTransforms.cxx WRAP_antsApplyTransforms.cxx  antscore/antsUtilities.cxx antscore/ReadWriteData.cxx antscore/antsCommandLineOption.cxx antscore/antsCommandLineParser.cxx antscore/ANTsVersion.cxx)
 pybind11_add_module(antsJointFusion antscore/antsJointFusion.cxx WRAP_antsJointFusion.cxx antscore/antsUtilities.cxx antscore/ReadWriteData.cxx antscore/antsCommandLineOption.cxx antscore/antsCommandLineParser.cxx antscore/ANTsVersion.cxx)
-pybind11_add_module(antsLandmarkBasedTransformInitializer antscore/antsLandmarkBasedTransformInitializer.cxx WRAP_antsLandmarkBasedTransformInitializer.cxx antscore/antsUtilities.cxx antscore/ReadWriteData.cxx antscore/antsCommandLineOption.cxx antscore/antsCommandLineParser.cxx)
-pybind11_add_module(antsMotionCorr antscore/antsMotionCorr.cxx WRAP_antsMotionCorr.cxx antscore/antsUtilities.cxx antscore/ReadWriteData.cxx antscore/antsCommandLineOption.cxx antscore/antsCommandLineParser.cxx)
-pybind11_add_module(antsMotionCorrStats antscore/antsMotionCorrStats.cxx WRAP_antsMotionCorrStats.cxx antscore/antsUtilities.cxx antscore/ReadWriteData.cxx antscore/antsCommandLineOption.cxx antscore/antsCommandLineParser.cxx)
-pybind11_add_module(antsSliceRegularizedRegistration antscore/antsSliceRegularizedRegistration.cxx WRAP_antsSliceRegularizedRegistration.cxx antscore/antsUtilities.cxx antscore/ReadWriteData.cxx)
-pybind11_add_module(antsLandmarkBasedTransformInitializer antscore/antsLandmarkBasedTransformInitializer.cxx WRAP_antsLandmarkBasedTransformInitializer.cxx antscore/antsUtilities.cxx antscore/ReadWriteData.cxx antscore/antsCommandLineOption.cxx antscore/antsCommandLineParser.cxx)
-pybind11_add_module(antsMotionCorr antscore/antsMotionCorr.cxx WRAP_antsMotionCorr.cxx antscore/antsUtilities.cxx antscore/ReadWriteData.cxx antscore/antsCommandLineOption.cxx antscore/antsCommandLineParser.cxx)
-pybind11_add_module(antsMotionCorrStats antscore/antsMotionCorrStats.cxx WRAP_antsMotionCorrStats.cxx antscore/antsUtilities.cxx antscore/ReadWriteData.cxx antscore/antsCommandLineOption.cxx antscore/antsCommandLineParser.cxx)
-pybind11_add_module(Atropos antscore/Atropos.cxx WRAP_Atropos.cxx antscore/antsUtilities.cxx antscore/ReadWriteData.cxx antscore/antsCommandLineOption.cxx antscore/antsCommandLineParser.cxx)
+pybind11_add_module(antsLandmarkBasedTransformInitializer antscore/antsLandmarkBasedTransformInitializer.cxx WRAP_antsLandmarkBasedTransformInitializer.cxx  antscore/antsUtilities.cxx antscore/ReadWriteData.cxx antscore/antsCommandLineOption.cxx antscore/antsCommandLineParser.cxx antscore/ANTsVersion.cxx)
+pybind11_add_module(antsMotionCorr antscore/antsMotionCorr.cxx WRAP_antsMotionCorr.cxx  antscore/antsUtilities.cxx antscore/ReadWriteData.cxx antscore/antsCommandLineOption.cxx antscore/antsCommandLineParser.cxx antscore/ANTsVersion.cxx)
+pybind11_add_module(antsMotionCorrStats antscore/antsMotionCorrStats.cxx WRAP_antsMotionCorrStats.cxx  antscore/antsUtilities.cxx antscore/ReadWriteData.cxx antscore/antsCommandLineOption.cxx antscore/antsCommandLineParser.cxx antscore/ANTsVersion.cxx)
+pybind11_add_module(antsSliceRegularizedRegistration antscore/antsSliceRegularizedRegistration.cxx WRAP_antsSliceRegularizedRegistration.cxx  antscore/antsUtilities.cxx antscore/ReadWriteData.cxx antscore/antsCommandLineOption.cxx antscore/antsCommandLineParser.cxx antscore/ANTsVersion.cxx)
+pybind11_add_module(Atropos antscore/Atropos.cxx WRAP_Atropos.cxx  antscore/antsUtilities.cxx antscore/ReadWriteData.cxx antscore/antsCommandLineOption.cxx antscore/antsCommandLineParser.cxx antscore/ANTsVersion.cxx)
+pybind11_add_module(CreateJacobianDeterminantImage antscore/CreateJacobianDeterminantImage.cxx WRAP_CreateJacobianDeterminantImage.cxx  antscore/antsUtilities.cxx antscore/ReadWriteData.cxx antscore/antsCommandLineOption.cxx antscore/antsCommandLineParser.cxx antscore/ANTsVersion.cxx)
+pybind11_add_module(CreateTiledMosaic antscore/CreateTiledMosaic.cxx WRAP_CreateTiledMosaic.cxx  antscore/antsUtilities.cxx antscore/ReadWriteData.cxx antscore/antsCommandLineOption.cxx antscore/antsCommandLineParser.cxx antscore/ANTsVersion.cxx)
+pybind11_add_module(DenoiseImage antscore/DenoiseImage.cxx WRAP_DenoiseImage.cxx  antscore/antsUtilities.cxx antscore/ReadWriteData.cxx antscore/antsCommandLineOption.cxx antscore/antsCommandLineParser.cxx antscore/ANTsVersion.cxx)
+pybind11_add_module(iMath antscore/iMath.cxx WRAP_iMath.cxx  antscore/antsUtilities.cxx antscore/ReadWriteData.cxx antscore/antsCommandLineOption.cxx antscore/antsCommandLineParser.cxx antscore/ANTsVersion.cxx)
+pybind11_add_module(KellyKapowski antscore/KellyKapowski.cxx WRAP_KellyKapowski.cxx  antscore/antsUtilities.cxx antscore/ReadWriteData.cxx antscore/antsCommandLineOption.cxx antscore/antsCommandLineParser.cxx antscore/ANTsVersion.cxx)
+pybind11_add_module(LabelClustersUniquely antscore/LabelClustersUniquely.cxx WRAP_LabelClustersUniquely.cxx  antscore/antsUtilities.cxx antscore/ReadWriteData.cxx antscore/antsCommandLineOption.cxx antscore/antsCommandLineParser.cxx antscore/ANTsVersion.cxx)
+pybind11_add_module(LabelGeometryMeasures antscore/LabelGeometryMeasures.cxx WRAP_LabelGeometryMeasures.cxx  antscore/antsUtilities.cxx antscore/ReadWriteData.cxx antscore/antsCommandLineOption.cxx antscore/antsCommandLineParser.cxx antscore/ANTsVersion.cxx)
+pybind11_add_module(LesionFilling antscore/LesionFilling.cxx WRAP_LesionFilling.cxx  antscore/antsUtilities.cxx antscore/ReadWriteData.cxx antscore/antsCommandLineOption.cxx antscore/antsCommandLineParser.cxx antscore/ANTsVersion.cxx)
+pybind11_add_module(N3BiasFieldCorrection antscore/N3BiasFieldCorrection.cxx WRAP_N3BiasFieldCorrection.cxx  antscore/antsUtilities.cxx antscore/ReadWriteData.cxx antscore/antsCommandLineOption.cxx antscore/antsCommandLineParser.cxx antscore/ANTsVersion.cxx)
+pybind11_add_module(N4BiasFieldCorrection antscore/N4BiasFieldCorrection.cxx WRAP_N4BiasFieldCorrection.cxx  antscore/antsUtilities.cxx antscore/ReadWriteData.cxx antscore/antsCommandLineOption.cxx antscore/antsCommandLineParser.cxx antscore/ANTsVersion.cxx)
+pybind11_add_module(NonLocalSuperResolution antscore/NonLocalSuperResolution.cxx WRAP_NonLocalSuperResolution.cxx  antscore/antsUtilities.cxx antscore/ReadWriteData.cxx antscore/antsCommandLineOption.cxx antscore/antsCommandLineParser.cxx antscore/ANTsVersion.cxx)
+pybind11_add_module(ResampleImage antscore/ResampleImage.cxx WRAP_ResampleImage.cxx  antscore/antsUtilities.cxx antscore/ReadWriteData.cxx antscore/antsCommandLineOption.cxx antscore/antsCommandLineParser.cxx antscore/ANTsVersion.cxx)
+pybind11_add_module(SuperResolution antscore/SuperResolution.cxx WRAP_SuperResolution.cxx  antscore/antsUtilities.cxx antscore/ReadWriteData.cxx antscore/antsCommandLineOption.cxx antscore/antsCommandLineParser.cxx antscore/ANTsVersion.cxx)
+pybind11_add_module(ThresholdImage antscore/ThresholdImage.cxx WRAP_ThresholdImage.cxx  antscore/antsUtilities.cxx antscore/ReadWriteData.cxx antscore/antsCommandLineOption.cxx antscore/antsCommandLineParser.cxx antscore/ANTsVersion.cxx)
+pybind11_add_module(TileImages antscore/TileImages.cxx WRAP_TileImages.cxx  antscore/antsUtilities.cxx antscore/ReadWriteData.cxx antscore/antsCommandLineOption.cxx antscore/antsCommandLineParser.cxx antscore/ANTsVersion.cxx)
+pybind11_add_module(TimeSCCAN antscore/TimeSCCAN.cxx WRAP_TimeSCCAN.cxx  antscore/antsUtilities.cxx antscore/ReadWriteData.cxx antscore/antsCommandLineOption.cxx antscore/antsCommandLineParser.cxx antscore/ANTsVersion.cxx)
+
+pybind11_add_module(antsRegistration antscore/itkantsRegistrationHelper.hxx antscore/antsRegistration.cxx antscore/antsRegistration4DFloat.cxx antscore/antsRegistration3DFloat.cxx antscore/antsRegistration4DDouble.cxx antscore/antsRegistration3DDouble.cxx antscore/antsRegistration2DFloat.cxx antscore/antsRegistration2DDouble.cxx antscore/antsRegistrationTemplateHeader.cxx WRAP_antsRegistration.cxx  antscore/antsUtilities.cxx antscore/ReadWriteData.cxx antscore/antsCommandLineOption.cxx antscore/antsCommandLineParser.cxx antscore/ANTsVersion.cxx)
 
 # -----------------------------------------------------------------
 ## LOCAL ##
@@ -58,6 +73,7 @@ target_link_libraries(antsImageHeaderInfo PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(antsImageMutualInformation PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(antsImageToImageMetric PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(antsImageUtils PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(antsTransform PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(antsTransform PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(cropImage PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(fsl2antstransform PRIVATE ${ITK_LIBRARIES})
@@ -73,7 +89,6 @@ target_link_libraries(sccaner PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(SmoothImage PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(weingartenImageCurvature PRIVATE ${ITK_LIBRARIES})
 
-
 ## WRAP ##
 target_link_libraries(antsAffineInitializer PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(antsApplyTransforms PRIVATE ${ITK_LIBRARIES})
@@ -81,12 +96,33 @@ target_link_libraries(antsJointFusion PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(antsLandmarkBasedTransformInitializer PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(antsMotionCorr PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(antsMotionCorrStats PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(antsSliceRegularizedRegistration PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(Atropos PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(CreateJacobianDeterminantImage PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(CreateTiledMosaic PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(DenoiseImage PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(iMath PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(KellyKapowski PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(LabelClustersUniquely PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(LabelGeometryMeasures PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(LesionFilling PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(N3BiasFieldCorrection PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(N4BiasFieldCorrection PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(NonLocalSuperResolution PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(ResampleImage PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(SuperResolution PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(ThresholdImage PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(TileImages PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(TimeSCCAN PRIVATE ${ITK_LIBRARIES})
+
+target_link_libraries(antsRegistration PRIVATE ${ITK_LIBRARIES})
 
 # -----------------------------------------------------------------
 ## VIZ ##
-#pybind11_add_module(antsSurf antscore/antsSurf.cxx WRAP_antsSurf.cxx antscore/antsUtilities.cxx antscore/ReadWriteData.cxx antscore/antsCommandLineOption.cxx antscore/antsCommandLineParser.cxx)
-#pybind11_add_module(antsVol antscore/antsVol.cxx WRAP_antsVol.cxx antscore/antsUtilities.cxx antscore/ReadWriteData.cxx antscore/antsCommandLineOption.cxx antscore/antsCommandLineParser.cxx antscore/ANTsVersion.cxx)
-target_link_libraries(antsSurf PRIVATE ${ITK_LIBRARIES})
-target_link_libraries(antsVol PRIVATE ${ITK_LIBRARIES})
+#pybind11_add_module(antsSurf antscore/antsSurf.cxx WRAP_antsSurf.cxx  antscore/antsUtilities.cxx antscore/ReadWriteData.cxx antscore/antsCommandLineOption.cxx antscore/antsCommandLineParser.cxx)
+#pybind11_add_module(antsVol antscore/antsVol.cxx WRAP_antsVol.cxx  antscore/antsUtilities.cxx antscore/ReadWriteData.cxx antscore/antsCommandLineOption.cxx antscore/antsCommandLineParser.cxx)
+#pybind11_add_module(ConvertScalarImageToRGB antscore/ConvertScalarImageToRGB.cxx WRAP_ConvertScalarImageToRGB.cxx  antscore/antsUtilities.cxx antscore/ReadWriteData.cxx antscore/antsCommandLineOption.cxx antscore/antsCommandLineParser.cxx)
+#target_link_libraries(ConvertScalarImageToRGB PRIVATE ${ITK_LIBRARIES})
+#target_link_libraries(antsSurf PRIVATE ${ITK_LIBRARIES})
+#target_link_libraries(antsVol PRIVATE ${ITK_LIBRARIES})
 
