--- a/ants/lib/CMakeLists.txt
+++ b/ants/lib/CMakeLists.txt
@@ -5,6 +5,9 @@ project(ants)
 #set(CMAKE_CXX_VISIBILITY_PRESET hidden)
 set(PYBIND11_CPP_STANDARD -std=c++14)
 
+SET ( CMAKE_C_FLAGS     " ${CMAKE_C_FLAGS} -Wno-c++11-long-long -fPIC -O2 -DNDEBUG " )
+SET ( CMAKE_CXX_FLAGS   " ${CMAKE_CXX_FLAGS} -Wno-c++11-long-long -fPIC -O2 -DNDEBUG  " )
+
 find_package(ITK REQUIRED)
 include(${ITK_USE_FILE})
 
@@ -55,9 +58,9 @@ pybind11_add_module(weingartenImageCurvature LOCAL_weingartenImageCurvature.cxx)
 pybind11_add_module(antsAffineInitializer antscore/antsAffineInitializer.cxx WRAP_antsAffineInitializer.cxx)
 pybind11_add_module(antsApplyTransforms antscore/antsApplyTransforms.cxx WRAP_antsApplyTransforms.cxx)
 pybind11_add_module(antsJointFusion antscore/antsJointFusion.cxx WRAP_antsJointFusion.cxx)
-pybind11_add_module(antsLandmarkBasedTransformInitializer antscore/antsLandmarkBasedTransformInitializer.cxx WRAP_antsLandmarkBasedTransformInitializer.cxx)
-pybind11_add_module(antsMotionCorr antscore/antsMotionCorr.cxx WRAP_antsMotionCorr.cxx)
-pybind11_add_module(antsMotionCorrStats antscore/antsMotionCorrStats.cxx WRAP_antsMotionCorrStats.cxx)
+#pybind11_add_module(antsLandmarkBasedTransformInitializer antscore/antsLandmarkBasedTransformInitializer.cxx WRAP_antsLandmarkBasedTransformInitializer.cxx)
+#pybind11_add_module(antsMotionCorr antscore/antsMotionCorr.cxx WRAP_antsMotionCorr.cxx)
+#pybind11_add_module(antsMotionCorrStats antscore/antsMotionCorrStats.cxx WRAP_antsMotionCorrStats.cxx)
 pybind11_add_module(antsSliceRegularizedRegistration antscore/antsSliceRegularizedRegistration.cxx WRAP_antsSliceRegularizedRegistration.cxx)
 pybind11_add_module(Atropos antscore/Atropos.cxx WRAP_Atropos.cxx)
 pybind11_add_module(CreateJacobianDeterminantImage antscore/CreateJacobianDeterminantImage.cxx WRAP_CreateJacobianDeterminantImage.cxx)
@@ -70,9 +73,9 @@ pybind11_add_module(LabelGeometryMeasures antscore/LabelGeometryMeasures.cxx WRA
 pybind11_add_module(LesionFilling antscore/LesionFilling.cxx WRAP_LesionFilling.cxx)
 pybind11_add_module(N3BiasFieldCorrection antscore/N3BiasFieldCorrection.cxx WRAP_N3BiasFieldCorrection.cxx)
 pybind11_add_module(N4BiasFieldCorrection antscore/N4BiasFieldCorrection.cxx WRAP_N4BiasFieldCorrection.cxx)
-pybind11_add_module(NonLocalSuperResolution antscore/NonLocalSuperResolution.cxx WRAP_NonLocalSuperResolution.cxx)
+#pybind11_add_module(NonLocalSuperResolution antscore/NonLocalSuperResolution.cxx WRAP_NonLocalSuperResolution.cxx)
 pybind11_add_module(ResampleImage antscore/ResampleImage.cxx WRAP_ResampleImage.cxx)
-pybind11_add_module(SuperResolution antscore/SuperResolution.cxx WRAP_SuperResolution.cxx)
+#pybind11_add_module(SuperResolution antscore/SuperResolution.cxx WRAP_SuperResolution.cxx)
 pybind11_add_module(ThresholdImage antscore/ThresholdImage.cxx WRAP_ThresholdImage.cxx)
 pybind11_add_module(TileImages antscore/TileImages.cxx WRAP_TileImages.cxx)
 pybind11_add_module(TimeSCCAN antscore/TimeSCCAN.cxx WRAP_TimeSCCAN.cxx)
@@ -107,9 +110,9 @@ target_link_libraries(weingartenImageCurvature PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(antsAffineInitializer PRIVATE ${ITK_LIBRARIES} antsUtilities)
 target_link_libraries(antsApplyTransforms PRIVATE ${ITK_LIBRARIES} antsUtilities)
 target_link_libraries(antsJointFusion PRIVATE ${ITK_LIBRARIES} antsUtilities)
-target_link_libraries(antsLandmarkBasedTransformInitializer PRIVATE ${ITK_LIBRARIES} antsUtilities)
-target_link_libraries(antsMotionCorr PRIVATE ${ITK_LIBRARIES} antsUtilities)
-target_link_libraries(antsMotionCorrStats PRIVATE ${ITK_LIBRARIES} antsUtilities)
+#target_link_libraries(antsLandmarkBasedTransformInitializer PRIVATE ${ITK_LIBRARIES} antsUtilities)
+#target_link_libraries(antsMotionCorr PRIVATE ${ITK_LIBRARIES} antsUtilities)
+#target_link_libraries(antsMotionCorrStats PRIVATE ${ITK_LIBRARIES} antsUtilities)
 target_link_libraries(antsSliceRegularizedRegistration PRIVATE ${ITK_LIBRARIES} antsUtilities)
 target_link_libraries(Atropos PRIVATE ${ITK_LIBRARIES} antsUtilities)
 target_link_libraries(CreateJacobianDeterminantImage PRIVATE ${ITK_LIBRARIES} antsUtilities)
@@ -122,9 +125,9 @@ target_link_libraries(LabelGeometryMeasures PRIVATE ${ITK_LIBRARIES} antsUtiliti
 target_link_libraries(LesionFilling PRIVATE ${ITK_LIBRARIES} antsUtilities)
 target_link_libraries(N3BiasFieldCorrection PRIVATE ${ITK_LIBRARIES} antsUtilities)
 target_link_libraries(N4BiasFieldCorrection PRIVATE ${ITK_LIBRARIES} antsUtilities)
-target_link_libraries(NonLocalSuperResolution PRIVATE ${ITK_LIBRARIES} antsUtilities)
+#target_link_libraries(NonLocalSuperResolution PRIVATE ${ITK_LIBRARIES} antsUtilities)
 target_link_libraries(ResampleImage PRIVATE ${ITK_LIBRARIES} antsUtilities)
-target_link_libraries(SuperResolution PRIVATE ${ITK_LIBRARIES} antsUtilities)
+#target_link_libraries(SuperResolution PRIVATE ${ITK_LIBRARIES} antsUtilities)
 target_link_libraries(ThresholdImage PRIVATE ${ITK_LIBRARIES} antsUtilities)
 target_link_libraries(TileImages PRIVATE ${ITK_LIBRARIES} antsUtilities)
 target_link_libraries(TimeSCCAN PRIVATE ${ITK_LIBRARIES} antsUtilities)
