--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ os:
     - osx
 
 install:
+    - travis_retry pip install --upgrade pip setuptools wheel
+    - travis_retry pip install -r requirements.txt --only-binary=scipy
     - python setup.py install
-
-sudo: false
