--- a/.travis.yml
+++ b/.travis.yml
@@ -24,10 +24,17 @@ before_install:
   - x=`cmake_setup`; echo "${x}"; eval ${x};
   - cmake --version
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; 
-    then 
-      brew install ccache; 
-      export PATH="/usr/local/opt/ccache/libexec:$PATH";
-    fi
+      then 
+        echo "OSX"
+        brew update;
+        brew install ccache; 
+        brew install cmake;
+      fi
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; 
+      then 
+        echo "LINUX"
+        apt-get install cmake
+      fi
 
 install:
   - travis_retry pip install --upgrade pip setuptools wheel
