--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,17 @@ install:
   - travis_retry pip install -r requirements.txt --only-binary=scipy
   - python setup.py install
 
+matrix:
+  include:
+    - language: generic
+      os: osx
+      before_install:
+        - brew update
+        - brew install python3
+        - virtualenv env -p python3
+        - source env/bin/activate
+    - language: python
+      os: linux
+
 script:
     - ./tests/run_tests.sh
