--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,36 @@
 language: python
-python:
-  - 3.6
-
-os:
-  - linux
-
-compiler: clang
-
-install:
-  - travis_retry pip install --upgrade pip setuptools wheel
-  - travis_retry pip install -r requirements.txt --only-binary=scipy
-  - python setup.py install
+env:
+  global:
+    - CI=true
 
 matrix:
   include:
-    - language: generic
-      os: osx
-      before_install:
-        - brew update
-        - brew install python3
-        - virtualenv env -p python3
-        - source env/bin/activate
-    - language: python
-      os: linux
-  allow_failures:
+    - os: linux
+      python: 3.6
+
     - os: osx
+      sudo: required
+      language: generic
+
+#  Manually install python on osx
+install: |
+  if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
+
+      brew update;
+      brew install python3;
+      python3 -m venv venv;
+      source venv/bin/activate;
+      travis_retry pip install --upgrade pip setuptools wheel
+      travis_retry pip install -r requirements.txt --only-binary=scipy
+      python setup.py install
+
+  else
+
+      travis_retry pip install --upgrade pip setuptools wheel
+      travis_retry pip install -r requirements.txt --only-binary=scipy
+      python setup.py install
+
+  fi
 
 script:
     - ./tests/run_tests.sh
