--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ env:
   global:
     - CI=true
 
+cache:
+    - ccache
+    - directories:
+        - $HOME/.ccache
+
 matrix:
   include:
     - os: linux
@@ -17,9 +22,17 @@ install: |
   if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
 
       brew update;
+
+      brew install ccache;
+      unset CCACHE_DISABLE;
+      export CCACHE_DIR=$HOME/.ccache;
+      ccache --show-stats;
+      export PATH="/usr/local/opt/ccache/libexec:$PATH";
+      
       brew install python3;
       python3 -m venv venv;
       source venv/bin/activate;
+
       travis_retry pip install --upgrade pip setuptools wheel
       travis_retry pip install -r requirements.txt --only-binary=scipy
       python setup.py install
