--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ matrix:
     - os: osx
       sudo: required
       language: generic
+  allow_failures:
+    - os: osx
 
 # Manually install python on osx
 install: |
